deploy/local-kubernetes/webapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
  labels:
    app: weatherapp
spec:
  replicas: 3
  selector:
    matchLabels:
      service: webapi
  template:
    metadata:
      labels:
        service: webapi
        app: weatherapp
    spec:
      containers:
      - name: webapi
        image: webapi
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
