deploy/local-kubernetes/webapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
  labels:
    app: web-application
    service: webapi
spec:
  ports:
  - port: 80
  selector:
    service: webapi
