deploy/local-kubernetes/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app: web-application
    service: webapp
spec:
  ports:
  - nodePort: 30080
    port: 80
  type: NodePort
  selector:
    service: webapp
