deploy/local-kubernetes/webapp-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    app: weatherapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: webapp-service
          servicePort: 80
